--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 
         <div class="sorting-section" id="shop">
             <div class="sortDescription">
-                <div>
+                <div class="sortParts">
                 <h3>Thymian</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, neque quidem. Quod, adipisci unde vel necessitatibus nulla asperiores? Similique, porro?</p>
                 </div>
                 <img src="./img/sage.jpg" alt="sage-plant">
             </div>
             <div class="sortDescription">
-                <div>
+                <div class="sortParts">
                 <h3>Thymian</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, neque quidem. Quod, adipisci unde vel necessitatibus nulla asperiores? Similique, porro?</p>
                 </div>
                 <img src="./img/rosemary.jpg" alt="rosemary-plant">
             </div>
             <div class="sortDescription">
-                <div>
+                <div class="sortParts">
                 <h3>Thymian</h3>                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, neque quidem. Quod, adipisci unde vel necessitatibus nulla asperiores? Similique, porro?</p>
                 </div>
